--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,17 @@ body {
     background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/127/552/original/davies-designs-studio-G-6kwVnClsE-unsplash.jpg?1716767385);
     background-repeat: no-repeat;
     background-size: cover;
-    font-family: Roboto;
+    font-family: "Roboto", sans-serif;
 }
 .weather-page {
     max-width: 600px;
-    background-color: rgb(244, 247, 247,0.4);
-    margin: 55px auto;
+    background-color: rgba(229, 239, 239, 0.646);
+    margin: 50px auto;
     padding: 20px 25px;
     border-radius: 15px;
-    box-shadow: 10px 12px #d9d5e3;
+    box-shadow: 10px 12px rgba(192, 178, 202, 0.4);
+    
+  //  #d8d7dc;
 }
 .search-input {
     background-color:#d9d5e3;
@@ -46,14 +48,14 @@ a {
 }
 .weather-city {
     margin: 0;
-    font-size: 36px;
+    font-size: 25px;
     line-height: 30px;
 }
 .weather-details {
     font-size: 14px;
-    font-weight: 200px;
+    font-weight: 300px;
     line-height: 20px;
-    color: rgba(39, 33, 66, 0.4);
+    color: rgba(17, 16, 23, 0.8);
 }
 .weather-details strong {
     color: blueviolet;
@@ -62,17 +64,17 @@ a {
     display: flex;
 }
 .icon {
-    font-size: 40px;
-    margin-top: 12px;
+    width: 88px;
+    height: 88px;
 }
 .temperature-value {
-    font-size: 60px;
-    margin-left: 13px;
-    font-weight: 500px;
+    font-size: 70px;
+    font-weight: 400px;
+    line-height: 90px;
 }
 .temperature-unit {
     font-size: 30px;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 footer {
     text-align: center;
@@ -80,5 +82,5 @@ footer {
     padding: 10px 0 0 0;
     font-size: 14px;
     color: rgb(97, 90, 90);
-    font-weight: 400;
+    font-weight: 500px;
 }
