--- a/src/index.css
+++ b/src/index.css
@@ -81,29 +81,32 @@ a {
 }
 .weather-forecast-day{
     display: flex;
-    flex-direction: column;
     align-items: center;
+    flex-direction: column;
 }
 .weather-date {
     text-align: center;
     color: rgba(39, 33, 66, 0.8);
     font-size: 16px;
-    line-height: 20px;
-    margin-bottom: 15px;
+    line-height: 16px;
+    margin-bottom: 2px;
 }
-.weather-icon {
-    font-size: 60px;
-    text-align: center;
+.forecast-icon {
+    width: 65px;
+    height: 65px;
+    display: block;
+    margin: 0 auto;
 }
 .forecast-temperatures {
     text-align: center;
     color: #f65282;
     margin-top: 14px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    margin-top: 10px;
 }
 .forecast-temp {
-    padding: 0 6px;
+    padding: 0 4px;
 }
 
 footer {
